add support for arbitrary key in data for color

--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,7 @@
       <span class="field">Dataset:</span><span><select id="datasets"></select></span>
       <span class="field">Min. steps:</span><span><input id="minSteps" type="text" /></span>
       <span><button id="btnLoad">Load</button></span>
+      <span class="field">Color Key:</span><span><select id="colorKeys"></select></span>
       <span class="field">Status:</span><span id="status"></span>
     </div>
     <div id="chart-panel" class="panel">
