add footer with repository information

--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,7 @@
     <div id="chart-panel" class="panel">
       <div id="chart-container"></div>
     </div>
+    <p class="footer">Code Repository: <a href="https://github.com/hhromic/dynamic-community-vis">https://github.com/hhromic/dynamic-community-vis</a></div>
     <script src="js/d3.v3.min.js"></script>
     <script src="js/eventDrops.min.js"></script>
     <script src="js/datasets.js"></script>
